# Evidencias_FRCV

./: .gitignore  .replit  README.md  main.py  pyproject.toml  replit.md  requirements.txt
.local/state/replit/agent/: .latest.json
.local/state/replit/agent/filesystem/: filesystem_state.json
.streamlit/: config.toml
attached_assets/: Pasted-Crea-una-aplicaci-n-web-completa-en-Python-usando-Streamlit-para-gestionar-un-repositorio-de-evidenc-1756061514388_1756061514390.txt  Pasted-Criterios-y-Est-ndares-de-Calidad-para-la-Acreditaci-n-Institucional-del-Subsistema-Universitario-I--1756133893988_1756133893990.txt  Pasted-El-error-403-en-GCP-Cloud-Storage-indica-un-problema-de-autenticaci-n-o-permisos-Aunque-menciones-q-1756390272752_1756390272754.txt
