[tool.poetry]
name = "sistema-evidencias"
version = "1.0.0"
description = "Sistema de gestión de evidencias para acreditación"
authors = ["David Troncoso <david.troncoso@uss.cl>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7,<3.12"
streamlit = "^1.49.0"
gspread = "^6.2.1"
google-auth = "^2.40.3"
google-auth-oauthlib = "^1.2.2"
google-cloud-storage = "^3.3.0"
pandas = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"